# pdx-text-editor

./: Cargo.toml  MODULE_STRUCTURE.md  README.md  index.html  install_fonts.bat  install_fonts.sh  package-it.bat  package-it.sh  test.pdx
src/: app.rs  data.rs  export.rs  main.rs  parser.rs  pdx.rs  pdx_text.rs  renderer.rs  theme.rs  ui.rs
src/helpers/: mod.rs  pdx_text.rs
