[package]
name = "pdx-editor"
version = "1.2.0"
edition = "2024"
description = "Next generation document format - editable, semantic, and multilingual"
homepage = "https://tera3bit.github.io/pdx-text-editor"
repository = "https://github.com/Tera3Bit/pdx-text-editor/"
license = "GPL-3.0"
authors = ["TeraBit Company"]

[dependencies]
eframe = { version = "0.30", features = ["glow", "persistence"] }
egui = "0.30"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rfd = "0.15"

image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }

printpdf = { version = "0.7", features = ["embedded_images"] }

chrono = "0.4"
unicode-bidi = "0.3"
arabic_reshaper = "0.4"

log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

##################################################
#                PACKAGING
##################################################

[package.metadata.packager]

name = "pdx-editor"
product_name = "PDX Editor"
identifier = "com.terabit.pdxeditor"

before-packaging-command = "cargo build --release"

formats = ["nsis", "deb", "appimage", "dmg"]

##################################################
# Windows
##################################################

[package.metadata.packager.windows]

##################################################
# Linux
##################################################

[package.metadata.packager.linux]
generate-desktop-entry = true

##################################################
# macOS
##################################################

[package.metadata.packager.macos]
minimum_system_version = "10.13"
